# xsan

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  build.bat  build.sh
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  DEVELOPMENT_PLAN.md  DISK_GROUP_DESIGN.md  MODULAR_BUILD.md  TECHNICAL_DESIGN.md
include/: xsan.h  xsan_cluster.h  xsan_common.h  xsan_error.h  xsan_policy.h  xsan_replication.h  xsan_storage.h  xsan_types.h  xsan_virtualization.h
src/bdev/: CMakeLists.txt  xsan_bdev.c
src/cluster/: CMakeLists.txt  xsan_cluster.c
src/common/: CMakeLists.txt  error.c  hashtable.c  list.c  ring_buffer.c  version.c
src/core/: CMakeLists.txt  spdk_manager.c
src/include/: xsan_bdev.h  xsan_config.h  xsan_disk_manager.h  xsan_error.h  xsan_event_loop.h  xsan_hashtable.h  xsan_io.h  xsan_list.h  xsan_log.h  xsan_memory.h  xsan_node_comm.h  xsan_nvmf_target.h  xsan_protocol.h  xsan_replication.h  xsan_ring_buffer.h  xsan_socket.h  xsan_spdk_manager.h  xsan_storage.h  xsan_string_utils.h  xsan_vhost.h  xsan_volume_manager.h
src/io/: CMakeLists.txt  xsan_io.c
src/main/: CMakeLists.txt  xsan_cli.c  xsan_node.c
src/metadata/: CMakeLists.txt  xsan_metadata_store.c  xsan_metadata_store.h
src/network/: CMakeLists.txt  event_loop.c  protocol.c  socket.c  xsan_node_comm.c
src/nvmf/: CMakeLists.txt  xsan_nvmf_target.c
src/policy/: CMakeLists.txt
src/replication/: CMakeLists.txt  xsan_replication.c  xsan_replication_common.c
src/storage/: CMakeLists.txt  disk_manager.c  volume_manager.c
src/utils/: CMakeLists.txt  config.c  log.c  memory.c  string_utils.c
src/vhost/: CMakeLists.txt  xsan_vhost.c
src/virtualization/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists.txt.bak  test_cluster.c  test_config.conf  test_infrastructure.c
tools/: CMakeLists.txt
